deleted unused notebook

--- a/portfolio/portfolio_sensitivity_stress.ipynb
+++ b/portfolio/portfolio_sensitivity_stress.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "      <td>AAPL</td>\n",
        "      <td>0.000365</td>\n",
        "      <td>1.766623e-04</td>\n",
-       "      <td>-0.563540</td>\n",
+       "      <td>-5.134711e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61963</th>\n",
@@ -163,7 +163,7 @@
        "      <td>AMZN</td>\n",
        "      <td>0.000664</td>\n",
        "      <td>-1.181722e-04</td>\n",
-       "      <td>-0.167185</td>\n",
+       "      <td>-5.264366e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61964</th>\n",
@@ -177,7 +177,7 @@
        "      <td>NVDA</td>\n",
        "      <td>0.000458</td>\n",
        "      <td>-2.250520e-07</td>\n",
-       "      <td>-0.085943</td>\n",
+       "      <td>-1.685601e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61965</th>\n",
@@ -191,7 +191,7 @@
        "      <td>MSFT</td>\n",
        "      <td>0.000388</td>\n",
        "      <td>-2.236399e-04</td>\n",
-       "      <td>-0.171059</td>\n",
+       "      <td>-2.646697e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61966</th>\n",
@@ -205,7 +205,7 @@
        "      <td>TSLA</td>\n",
        "      <td>0.000617</td>\n",
        "      <td>1.818146e-04</td>\n",
-       "      <td>0.942698</td>\n",
+       "      <td>1.242297e+00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -239,23 +239,23 @@
        "61965     LONG         0.000084           0.927197   MSFT      0.000388   \n",
        "61966     LONG         0.001797           1.009094   TSLA      0.000617   \n",
        "\n",
-       "       Rolling_Average    Weight  \n",
-       "0                  NaN       NaN  \n",
-       "1                  NaN       NaN  \n",
-       "2                  NaN       NaN  \n",
-       "3                  NaN       NaN  \n",
-       "4                  NaN       NaN  \n",
-       "...                ...       ...  \n",
-       "61962     1.766623e-04 -0.563540  \n",
-       "61963    -1.181722e-04 -0.167185  \n",
-       "61964    -2.250520e-07 -0.085943  \n",
-       "61965    -2.236399e-04 -0.171059  \n",
-       "61966     1.818146e-04  0.942698  \n",
+       "       Rolling_Average        Weight  \n",
+       "0                  NaN           NaN  \n",
+       "1                  NaN           NaN  \n",
+       "2                  NaN           NaN  \n",
+       "3                  NaN           NaN  \n",
+       "4                  NaN           NaN  \n",
+       "...                ...           ...  \n",
+       "61962     1.766623e-04 -5.134711e-01  \n",
+       "61963    -1.181722e-04 -5.264366e-02  \n",
+       "61964    -2.250520e-07 -1.685601e-07  \n",
+       "61965    -2.236399e-04 -2.646697e-07  \n",
+       "61966     1.818146e-04  1.242297e+00  \n",
        "\n",
        "[240335 rows x 11 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -288,11 +288,11 @@
       "3      2025-03-01 00:46:00                    0.000000   \n",
       "4      2025-03-01 00:47:00                    0.000000   \n",
       "...                    ...                         ...   \n",
-      "44591  2025-03-31 23:54:00                   -0.000003   \n",
-      "44592  2025-03-31 23:55:00                   -0.000034   \n",
-      "44593  2025-03-31 23:56:00                   -0.000024   \n",
-      "44594  2025-03-31 23:57:00                   -0.000030   \n",
-      "44595  2025-03-31 23:58:00                   -0.000011   \n",
+      "44591  2025-03-31 23:54:00                    0.000016   \n",
+      "44592  2025-03-31 23:55:00                   -0.000045   \n",
+      "44593  2025-03-31 23:56:00                   -0.000026   \n",
+      "44594  2025-03-31 23:57:00                   -0.000041   \n",
+      "44595  2025-03-31 23:58:00                   -0.000018   \n",
       "\n",
       "       Portfolio_Actual_Return  \n",
       "0                     0.000000  \n",
@@ -301,11 +301,11 @@
       "3                     0.000000  \n",
       "4                     0.000000  \n",
       "...                        ...  \n",
-      "44591                -0.000219  \n",
-      "44592                -0.000066  \n",
-      "44593                -0.000179  \n",
-      "44594                 0.000020  \n",
-      "44595                 0.001945  \n",
+      "44591                -0.000215  \n",
+      "44592                -0.000188  \n",
+      "44593                -0.000039  \n",
+      "44594                -0.000002  \n",
+      "44595                 0.002941  \n",
       "\n",
       "[44596 rows x 3 columns]\n"
      ]
@@ -314,7 +314,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_15428\\3243608313.py:6: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\fauza\\AppData\\Local\\Temp\\ipykernel_26884\\3243608313.py:6: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  portfolio_returns = combined_df.groupby(\"Date\").apply(\n"
      ]
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -410,32 +410,32 @@
        "    <tr>\n",
        "      <th>44591</th>\n",
        "      <td>2025-03-31 23:54:00</td>\n",
-       "      <td>-0.000003</td>\n",
-       "      <td>-0.000219</td>\n",
+       "      <td>0.000016</td>\n",
+       "      <td>-0.000215</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44592</th>\n",
        "      <td>2025-03-31 23:55:00</td>\n",
-       "      <td>-0.000034</td>\n",
-       "      <td>-0.000066</td>\n",
+       "      <td>-0.000045</td>\n",
+       "      <td>-0.000188</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44593</th>\n",
        "      <td>2025-03-31 23:56:00</td>\n",
-       "      <td>-0.000024</td>\n",
-       "      <td>-0.000179</td>\n",
+       "      <td>-0.000026</td>\n",
+       "      <td>-0.000039</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44594</th>\n",
        "      <td>2025-03-31 23:57:00</td>\n",
-       "      <td>-0.000030</td>\n",
-       "      <td>0.000020</td>\n",
+       "      <td>-0.000041</td>\n",
+       "      <td>-0.000002</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44595</th>\n",
        "      <td>2025-03-31 23:58:00</td>\n",
-       "      <td>-0.000011</td>\n",
-       "      <td>0.001945</td>\n",
+       "      <td>-0.000018</td>\n",
+       "      <td>0.002941</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -450,11 +450,11 @@
        "3      2025-03-01 00:46:00                    0.000000   \n",
        "4      2025-03-01 00:47:00                    0.000000   \n",
        "...                    ...                         ...   \n",
-       "44591  2025-03-31 23:54:00                   -0.000003   \n",
-       "44592  2025-03-31 23:55:00                   -0.000034   \n",
-       "44593  2025-03-31 23:56:00                   -0.000024   \n",
-       "44594  2025-03-31 23:57:00                   -0.000030   \n",
-       "44595  2025-03-31 23:58:00                   -0.000011   \n",
+       "44591  2025-03-31 23:54:00                    0.000016   \n",
+       "44592  2025-03-31 23:55:00                   -0.000045   \n",
+       "44593  2025-03-31 23:56:00                   -0.000026   \n",
+       "44594  2025-03-31 23:57:00                   -0.000041   \n",
+       "44595  2025-03-31 23:58:00                   -0.000018   \n",
        "\n",
        "       Portfolio_Actual_Return  \n",
        "0                     0.000000  \n",
@@ -463,16 +463,16 @@
        "3                     0.000000  \n",
        "4                     0.000000  \n",
        "...                        ...  \n",
-       "44591                -0.000219  \n",
-       "44592                -0.000066  \n",
-       "44593                -0.000179  \n",
-       "44594                 0.000020  \n",
-       "44595                 0.001945  \n",
+       "44591                -0.000215  \n",
+       "44592                -0.000188  \n",
+       "44593                -0.000039  \n",
+       "44594                -0.000002  \n",
+       "44595                 0.002941  \n",
        "\n",
        "[44596 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -590,37 +590,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.5</td>\n",
-       "      <td>1.098901</td>\n",
+       "      <td>1.120682</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.8</td>\n",
-       "      <td>1.098901</td>\n",
+       "      <td>1.120682</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.9</td>\n",
-       "      <td>1.098901</td>\n",
+       "      <td>1.120682</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.098901</td>\n",
+       "      <td>1.120682</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1.1</td>\n",
-       "      <td>1.098901</td>\n",
+       "      <td>1.120682</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>1.2</td>\n",
-       "      <td>1.098901</td>\n",
+       "      <td>1.120682</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>1.5</td>\n",
-       "      <td>1.098901</td>\n",
+       "      <td>1.120682</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -628,16 +628,16 @@
       ],
       "text/plain": [
        "   Adjustment_Factor  Final_Cumulative_Return\n",
-       "0                0.5                 1.098901\n",
-       "1                0.8                 1.098901\n",
-       "2                0.9                 1.098901\n",
-       "3                1.0                 1.098901\n",
-       "4                1.1                 1.098901\n",
-       "5                1.2                 1.098901\n",
-       "6                1.5                 1.098901"
+       "0                0.5                 1.120682\n",
+       "1                0.8                 1.120682\n",
+       "2                0.9                 1.120682\n",
+       "3                1.0                 1.120682\n",
+       "4                1.1                 1.120682\n",
+       "5                1.2                 1.120682\n",
+       "6                1.5                 1.120682"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -680,27 +680,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Crash</td>\n",
-       "      <td>1.618920</td>\n",
+       "      <td>1.885490</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Volatility_Spike</td>\n",
-       "      <td>1.108058</td>\n",
+       "      <td>1.118564</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Prediction_Inverted</td>\n",
-       "      <td>0.874594</td>\n",
+       "      <td>0.843275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Zero_Prediction</td>\n",
-       "      <td>0.898756</td>\n",
+       "      <td>0.861093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Normal</td>\n",
-       "      <td>1.098901</td>\n",
+       "      <td>1.120682</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -708,14 +708,14 @@
       ],
       "text/plain": [
        "              Scenario  Final_Cumulative_Return\n",
-       "0                Crash                 1.618920\n",
-       "1     Volatility_Spike                 1.108058\n",
-       "2  Prediction_Inverted                 0.874594\n",
-       "3      Zero_Prediction                 0.898756\n",
-       "4               Normal                 1.098901"
+       "0                Crash                 1.885490\n",
+       "1     Volatility_Spike                 1.118564\n",
+       "2  Prediction_Inverted                 0.843275\n",
+       "3      Zero_Prediction                 0.861093\n",
+       "4               Normal                 1.120682"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
