updated combine stats to read from rebalance output

--- a/portfolio/combine_stats.ipynb
+++ b/portfolio/combine_stats.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "input_stats",
    "metadata": {
     "ExecuteTime": {
@@ -44,18 +44,24 @@
      "output_type": "stream",
      "text": [
       "Input Period Statistics:\n",
-      "     Period  Final Portfolio Value  Annualized Sharpe  Max Drawdown  Win Rate\n",
-      "0  Period 1                 1.0403             3.8151         -6.77     53.01\n",
-      "1  Period 2                 1.0520             4.6947         -3.72     51.53\n",
-      "2  Period 3                 1.0326             3.1946         -8.01     51.43\n",
-      "3  Period 4                 1.0196             2.1642         -7.40     49.82\n",
+      "   Final_Portfolio_Value  Annualized_Sharpe  Max_Drawdown  Win_Rate  \\\n",
+      "0               1.040303           3.814032     -0.067749  0.530130   \n",
+      "1               1.052549           4.738009     -0.037012  0.516081   \n",
+      "2               1.032088           3.149347     -0.080200  0.514260   \n",
+      "3               1.018754           2.080986     -0.074128  0.497364   \n",
       "\n",
-      "Combined Period Statistics:\n",
-      "Combined Final Portfolio Value: 1.1522223253325763\n",
-      "Combined Annualized Sharpe Ratio: 3.46715\n",
-      "Combined Maximum Drawdown: -8.01\n",
-      "Combined Win Rate (%): 51.4475\n",
-      "Annualized Return (%): 257.95346629257716\n"
+      "   Period_End                     Method  \n",
+      "0  2025-03-08  max_return_for_volatility  \n",
+      "1  2025-03-15  max_return_for_volatility  \n",
+      "2  2025-03-22  max_return_for_volatility  \n",
+      "3  2025-03-29  max_return_for_volatility  \n",
+      "\n",
+      "✅ Combined Portfolio Performance Across Periods:\n",
+      "Combined Final Portfolio Value : 1.1513\n",
+      "Combined Annualized Sharpe     : 3.4456\n",
+      "Combined Maximum Drawdown      : -8.02%\n",
+      "Combined Win Rate              : 51.45%\n",
+      "Estimated Annualized Return    : 255.38%\n"
      ]
     }
    ],
@@ -63,49 +69,40 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# --- Input: Summary statistics for each period ---\n",
-    "data = {\n",
-    "    'Period': ['Period 1', 'Period 2', 'Period 3', 'Period 4'],\n",
-    "    'Final Portfolio Value': [1.0403, 1.0520, 1.0326, 1.0196],\n",
-    "    'Annualized Sharpe': [3.8151, 4.6947, 3.1946, 2.1642],\n",
-    "    'Max Drawdown': [-6.77, -3.72, -8.01, -7.40],\n",
-    "    'Win Rate': [53.01, 51.53, 51.43, 49.82]\n",
-    "}\n",
+    "# --- Load weekly stats from CSV ---\n",
+    "file_path = \"weekly_portfolio_stats.csv\"\n",
+    "df = pd.read_csv(file_path)\n",
     "\n",
-    "df = pd.DataFrame(data)\n",
-    "\n",
-    "print('Input Period Statistics:')\n",
+    "print(\"Input Period Statistics:\")\n",
     "print(df)\n",
     "\n",
     "# --- Aggregating the Statistics ---\n",
     "\n",
     "# 1. Final Portfolio Value: Multiply the period values to get the overall growth factor\n",
-    "combined_final_value = np.prod(df['Final Portfolio Value'])\n",
+    "combined_final_value = np.prod(df['Final_Portfolio_Value'])\n",
     "\n",
-    "# 2. Annualized Sharpe Ratio: (Approximation) Compute the simple average\n",
-    "combined_sharpe = df['Annualized Sharpe'].mean()\n",
+    "# 2. Annualized Sharpe Ratio: Average of individual Sharpe ratios\n",
+    "combined_sharpe = df['Annualized_Sharpe'].mean()\n",
     "\n",
-    "# 3. Maximum Drawdown: (Approximation) Use the worst (most negative) drawdown among the periods\n",
-    "combined_drawdown = df['Max Drawdown'].min()\n",
+    "# 3. Maximum Drawdown: Worst (most negative)\n",
+    "combined_drawdown = df['Max_Drawdown'].min()\n",
     "\n",
-    "# 4. Win Rate: (Approximation) Average the win rates (assuming equal weights)\n",
-    "combined_win_rate = df['Win Rate'].mean()\n",
+    "# 4. Win Rate: Average across periods\n",
+    "combined_win_rate = df['Win_Rate'].mean()\n",
     "\n",
     "# --- Calculate Annualized Return ---\n",
-    "# The combined_final_value represents the cumulative growth factor over 28 days.\n",
-    "trading_days_year = 252\n",
-    "total_period_days = 28  # 4 periods * 7 days each\n",
-    "annualization_factor = trading_days_year / total_period_days\n",
+    "# Each period is 7 days (weekly rebalancing)\n",
+    "total_days = len(df) * 7\n",
+    "annualization_factor = 252 / total_days\n",
     "annualized_return = combined_final_value ** annualization_factor - 1\n",
     "\n",
     "# --- Display the Aggregated Results ---\n",
-    "print('\\nCombined Period Statistics:')\n",
-    "print('Combined Final Portfolio Value:', combined_final_value)\n",
-    "print('Combined Annualized Sharpe Ratio:', combined_sharpe)\n",
-    "print('Combined Maximum Drawdown:', combined_drawdown)\n",
-    "print('Combined Win Rate (%):', combined_win_rate)\n",
-    "print('Annualized Return (%):', annualized_return * 100)\n",
-    "\n"
+    "print(\"\\nCombined Portfolio Performance Across Periods:\")\n",
+    "print(f\"Combined Final Portfolio Value : {combined_final_value:.4f}\")\n",
+    "print(f\"Combined Annualized Sharpe     : {combined_sharpe:.4f}\")\n",
+    "print(f\"Combined Maximum Drawdown      : {combined_drawdown:.2%}\")\n",
+    "print(f\"Combined Win Rate              : {combined_win_rate:.2%}\")\n",
+    "print(f\"Estimated Annualized Return    : {annualized_return * 100:.2f}%\")\n"
    ]
   }
  ],
@@ -125,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
