--- a/portfolio/combine_stats.ipynb
+++ b/portfolio/combine_stats.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "input_stats",
    "metadata": {
     "ExecuteTime": {
@@ -56,7 +56,7 @@
       "2  2025-03-22  max_return_for_volatility  \n",
       "3  2025-03-29  max_return_for_volatility  \n",
       "\n",
-      "✅ Combined Portfolio Performance Across Periods:\n",
+      "Combined Portfolio Performance Across Periods:\n",
       "Combined Final Portfolio Value : 1.1513\n",
       "Combined Annualized Sharpe     : 3.4456\n",
       "Combined Maximum Drawdown      : -8.02%\n",
